--- a/best-practice/document.adoc
+++ b/best-practice/document.adoc
@@ -1,34 +1,34 @@
-= Best Practice for OGC (add title text)
+= OGC CityGML Implementation Guidance (Best Practice) 
 :comment: ### Document type; mandatory. Visit: https://www.metanorma.org/author/ogc/authoring/ for permitted types
 :doctype: best-practice
 :comment: ### Language of the document; mandatory. Specified in two-letter code: "en" for English, "fr" for French
 :language: en
 :comment: ### Document status/stage; mandatory. Visit: https://www.metanorma.org/author/ogc/authoring/ for permitted types
-:status: swg-draft
+:status: draft
 :comment: ### Relevant committee; mandatory. The permitted types are: technical, planning, and strategic-member-advisory
 :committee: technical
 :comment: ### Draft status, enables display of reviewer notes; remove if final document. Value provided conforms the exact iteration of the document in x.y format
-:draft: 3.0
+:draft: 1.0
 :comment: ### External link referencing the document; optional. If not provided, a default value is created following this structure: "http://www.opengis.net/doc/{abbrevation of doctype}/{abbrev}/{version}"
-:external-id: http://www.opengis.net/doc/BP/moving-features-ext-netCDF/1.0
+:external-id: http://www.opengis.net/doc/BP/city_gml_best_practices/0.1
 :comment: ### Internal reference number; mandatory
-:docnumber: YY-999
+:docnumber: 24-999
 :comment: ### Date on which the standard was updated; mandatory
-:received-date: 2029-03-30
+:received-date: 2024-08-28
 :comment: ### Date on which the standard was approved by the issuing authority; mandatory
-:issued-date: 2029-03-30
+:issued-date: 2024-08-28
 :comment: ### Date on which the standard was published; mandatory
-:published-date: 2029-03-30
+:published-date: 2024-08-28
 :comment: ### Author one
-:fullname: Editor One
-:comment: ### Author two
-:fullname_2: Editor Two
+:fullname: Tamrat Belayneh, Esri
+:comment: ### Author one
+:fullname_2: Luis Gisler, Esri
 :comment: ### Role of the authors; mandatory
 :role: editor
 :comment: ### Comma delimited keywords; mandatory
-:keywords: ogcdoc, OGC document, API, openapi, html
+:keywords: ogcdoc, OGC document, CityGML, CityJSON, 3D
 :comment: ### Semicolon-delimited list of the submitting organizations; mandatory
-:submitting-organizations: Organization one; Organization two; Organization three
+:submitting-organizations: Esri; HFT; TU Delft; Virtual City Systems; Conterra
 :comment: ### Metanorma flavor; mandatory
 :mn-document-class: ogc
 :comment: ### Desired output formats; mandatory
